Updates to man and bench

--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
       <!-- Woman -- https://www.cgtrader.com/3d-models/character/woman/girl-in-white-tight-dress-0327-613c4885-854f-47b8-805b-e7cca7f707e6-->
       <a-gltf-model
         id="woman" scale= ".02 .02 .02" position="1 .07 -15"
-        src="addModel/man_in_a_suit._scanned_model/scene.glb">
+        src="addModel/man_in_a_suit._scanned_model/man.glb">
       </a-gltf-model>
       
       <!-- Bench -- https://sketchfab.com/3d-models/classic-park-bench-low-poly-01a5b64427984632bb44242da3813bb1-->
       <a-gltf-model
         id="bench" scale= ".25 .25 .25" position="-2.5 0 -4.5" rotation="0 0 0"
-        src="addModel/bench/scene.gltf">
+        src="addModel/bench/bench.gltf">
       </a-gltf-model>
       
       <!-- Umbrella -- https://sketchfab.com/3d-models/umbrella-4754f1bc1d6341d19b313ad6a51417de-->
